namespace cron
{
    public enum cronParamTypeEnum {
        invalid,
        Value,
        List,
        Calculation,
        Range,
        All,
    }
}